working on production build

--- a/theme/index.html
+++ b/theme/index.html
@@ -68,7 +68,7 @@
 Welcome Slider
 ==================================== -->
 
- <section class="hero-area overlay" style="background-image: url('images/wall-2933017_1920.jpeg');">
+ <section class="hero-area overlay" style="background-image: url('images/banner/hero-area.jpg');">
  	<!-- <video autoplay muted loop class="hero-video">
 		<source src="images/banner/hero-video.mp4" type="video/mp4">
 	</video> -->
@@ -85,7 +85,7 @@ Welcome Slider
  	</div>
  </section>
 
- <!--
+ <!-- 
 Sticky Navigation
 ==================================== -->
 <header id="navigation" class="navigation">
@@ -648,7 +648,7 @@ Start Counter Section
 	</div> <!-- end container -->
 </section> <!-- end section -->
 
-<!--
+<!-- 
 Start Our Team
 =========================================== -->
 
@@ -1246,10 +1246,10 @@ Start Our Team
 	</div> <!-- end container -->
 </footer> <!-- end footer -->
 
-	<!--
+	<!-- 
 	Essential Scripts
 	=====================================-->
-
+	
 	<!-- Main jQuery -->
 	<script src="plugins/jquery/jquery.min.js"></script>
 	<!-- Bootstrap 3.1 -->
@@ -1267,6 +1267,6 @@ Start Our Team
 	<script src="plugins/wow/wow.min.js"></script>
 	<!-- Custom js -->
 	<script src="js/script.js"></script>
-
+	
 	</body>
 </html>
