--- a/theme/index.html
+++ b/theme/index.html
@@ -74,7 +74,7 @@ Welcome Slider
 	</video> -->
  	<div class="block">
  		<div class="video-button mb-5">
- 			<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
+ 			<a class="popup-video" href="https://youtu.be/CdMTpTVezUI">
  				<i class="tf-ion-play"></i>
  			</a>
  		</div>
