--- a/theme/index.html
+++ b/theme/index.html
@@ -95,7 +95,8 @@ Sticky Navigation
       <!-- logo -->
       <a class="navbar-brand logo" href="index.html">
         <!-- <img src="images/logo.png" alt="Website Logo" /> -->
-				<img src="images/transformer-logo.svg" class="transformer-logo" />
+				<img src="images/transformer-logo.svg" class="transformer-logo" style="  height: 40px!important;
+				width: 40px!important;"/>
       </a>
       <!-- /logo -->
 
