--- a/theme/index.html
+++ b/theme/index.html
@@ -213,7 +213,7 @@ End Sticky Navigation
 	<div class="container-fluid p-0">
 		<div class="row no-gutters align-items-center">
 			<div class="col-lg-6">
-				<img class="img-fluid" src="images/about/about-business-man.jpg" alt="">
+				<img class="img-fluid" src="images/meeting.jpeg" alt="">
 			</div>
 			<div class="col-lg-6">
 				<div class="content-block">
