testing removing @include portfolio block in source index.html

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 
 @@include('blocks/skills.htm')
 
-@@include('blocks/portfolio.htm')
+<!-- @@include('blocks/portfolio.htm') -->
 
 @@include('blocks/counter.htm')
 
