--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
 
 @@include('blocks/counter.htm')
 
-@@include('blocks/team.htm')
+<!-- @@include('blocks/team.htm') -->
 
 @@include('blocks/pricing.htm')
 
