--- a/theme/index.html
+++ b/theme/index.html
@@ -79,8 +79,7 @@ Welcome Slider
  			</a>
  		</div>
  		<h1>Experience the new reality</h1>
- 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis
- 			autem,iste tempora nostrum numquam sapiente!</p>
+ 		<p>Custom design at near-cost pricing. 24 hour service. Built by small business owners, for small business owners.</p>
  		<a href="#services" class="btn btn-transparent smooth-scroll">Explore Us</a>
  	</div>
  </section>
