changed about us statements

--- a/theme/index.html
+++ b/theme/index.html
@@ -159,8 +159,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3 class="ddd">We're Creative</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<p>Our team is passionate about what they build. Whether its complex motion design, or databases, we love creating!</p>
 					</div>
 				</div>
 			</div>
@@ -175,8 +174,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>We're Professional</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<p>We love our work, and we want to work for you. That's why our technical staff gaurantees a response within 30 minutes.</p>
 					</div>
 				</div>
 			</div>
