changed about us text

--- a/theme/index.html
+++ b/theme/index.html
@@ -189,8 +189,7 @@ End Sticky Navigation
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>We're Genius</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<p>Well that seems boastful doesn't it? Contact us below for an explanation.</p>
 					</div>
 				</div>
 			</div>
