--- a/theme/index.html
+++ b/theme/index.html
@@ -208,7 +208,7 @@ End Sticky Navigation
 			<div class="col-lg-6">
 				<div class="content-block">
 					<h2>We’re A Digital Design Agency.</h2>
-					<p>				□ Our clients trust us. That's because we never stop working for them. We continuously maintain and look for ways to improve our products.
+					<p>Our clients trust us. That's because we never stop working for them. We continuously maintain and look for ways to improve our products.
 					</p>
 					<p>We are serious about bringing you customers, and improving your business by means of custom application design.</p>
 					<p>We use cutting edge marketing techniques to bring you the customers you want, and fast.</p>
@@ -220,8 +220,7 @@ End Sticky Navigation
 								</div>
 								<div class="media-body">
 									<h4 class="media-heading">SEO Optimized</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
-										eos saepe</p>
+									<p>We use all means necessary to put you at the top of the list, and keep you there.</p>
 								</div>
 							</div>
 						</div>
@@ -232,7 +231,7 @@ End Sticky Navigation
 								</div>
 								<div class="media-body">
 									<h4 class="media-heading">Easy Customization</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
+									<p>Don't like something? Change it. Our primary goal is your satisfaction.
 									</p>
 								</div>
 							</div>
