--- a/theme/index.html
+++ b/theme/index.html
@@ -251,7 +251,7 @@ Start Call To Action
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<h2>Great Design & Incredible Features</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p>
+				<p>Do you want to use the most modern features for a fraction of the cost? <br> Drop us a line, and let's get started!</p>
 				<a href="contact.html" class="btn btn-main">Start a project with us</a>
 			</div>
 		</div> <!-- End row -->
