--- a/theme/index.html
+++ b/theme/index.html
@@ -280,8 +280,7 @@ Start Call To Action
 						<i class="tf-globe"></i>
 					</div>
 					<h3>WordPress Theme</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>Pick from literally 1000's of themes on wordpress. Every one will be responsive.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -293,8 +292,7 @@ Start Call To Action
 						<i class="tf-ion-laptop"></i>
 					</div>
 					<h3>Responsive Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>What do we mean when we say responsive? That means no matter what device you are using, the design looks pixel-perfect!</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -306,8 +304,7 @@ Start Call To Action
 						<i class="tf-genius"></i>
 					</div>
 					<h3>Media &amp; Advertisement</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>We create videos to advertise your service on sites like youtube, and instagram. We also use SEM (Search Engine Marketing) to direct people to your site.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -319,8 +316,7 @@ Start Call To Action
 						<i class="tf-dial"></i>
 					</div>
 					<h3>Graphic Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>We use Adobe XD to design your logos, and mock-ups of proposal sites. Then we use those mock-ups and translate them to pixel-perfect design. Graphic design into literal graphics.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
