--- a/theme/index.html
+++ b/theme/index.html
@@ -328,8 +328,7 @@ Start Call To Action
 						<i class="tf-target3"></i>
 					</div>
 					<h3>Apps Development</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>Our dev team can make just about anything. Have an idea? Let's build it together. Need a solution for your business? We got you covered with performance dashboards, data visualization, and communication platforms.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -341,8 +340,7 @@ Start Call To Action
 						<i class="tf-lifesaver"></i>
 					</div>
 					<h3>Networking</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>Our cloud-based networking solutions are on the bleeding edge. Massive computing power, excellent speed no matter your location, scalable, and 100 percent secure.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -368,11 +366,9 @@ Start Call To Action
 		</div> <!-- End row -->
 		<div class="row">
 			<div class="col-md-6">
-				<h2>We’ve skilled in wide range of web and <br>
+				<h2>We’re skilled in wide range of web and <br>
 					Other digital market tools.</h2>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magni explicabo cum aperiam recusandae
-					sunt accusamus totam. Quidem quos fugiat sapiente numquam accusamus quas hic, itaque in libero reiciendis
-					tempora!</p>
+				<p>Our team are at the highest level of their fields. Whether it's development, data analysis, web design, or app development, we do what we do best.</p>
 				<img class="img-fluid" src="images/about/company-growth.png" alt="">
 			</div>
 			<div class="col-md-6 mt-4 mt-md-0">
@@ -935,20 +931,18 @@ Start Our Team
 
 						<!-- client photo -->
 						<div class="client-thumb">
-							<img src="images/team/client-1.jpg" class="img-fluid" alt="Meghna">
+							<img src="images/woman-review.jpeg" class="img-fluid" alt="Meghna">
 						</div>
 						<!-- /client photo -->
 
 						<!-- client info -->
 						<div class="client-info">
 							<div class="client-meta">
-								<h3>Jonathon Andrew</h3>
-								<span>Dec 26, 2018</span>
+								<h3>Shelly Francis</h3>
+								<span>Dec 26, 2020</span>
 							</div>
 							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ex, quia error, deserunt
-									voluptatibus repellendus? Incidunt eligendi aliquam repellat molestias, vel sed optio rem odit quis
-									ratione non consequuntur!</p>
+								<p>I had no idea what value my business had in the market until I hired Transformer. Since then my business has grown 10-fold. We are still growing, and I owe a ton of that to Transformer and the incredible teams working there! Wow!</p>
 							</div>
 						</div>
 						<!-- /client info -->
@@ -960,20 +954,18 @@ Start Our Team
 
 						<!-- client photo -->
 						<div class="client-thumb">
-							<img src="images/team/client-2.jpg" class="img-fluid" alt="Meghna">
+							<img src="images/man-review.jpeg" class="img-fluid" alt="Meghna">
 						</div>
 						<!-- /client photo -->
 
 						<!-- client info -->
 						<div class="client-info">
 							<div class="client-meta">
-								<h3>Jonathon Andrew</h3>
-								<span>Dec 26, 2018</span>
+								<h3>William Burgess</h3>
+								<span>Aug 06, 2019</span>
 							</div>
 							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel reiciendis qui in laborum obcaecati
-									expedita blanditiis animi placeat, nemo exercitationem porro. Consequuntur qui commodi minima
-									molestiae, dolores reprehenderit nemo inventore.</p>
+								<p>I hired Transformer when I thought my business wasn't going to last. My runway was running out, and they were my last chance. Here we are a year later and I've doubled my staff in order to accomodate all the orders! Can't thank you enough Transformer!</p>
 							</div>
 						</div>
 						<!-- /client info -->
@@ -985,20 +977,18 @@ Start Our Team
 
 						<!-- client photo -->
 						<div class="client-thumb">
-							<img src="images/team/client-1.jpg" class="img-fluid" alt="Meghna">
+							<img src="images/woman-review-2.jpeg" class="img-fluid" alt="Meghna">
 						</div>
 						<!-- /client photo -->
 
 						<!-- client info -->
 						<div class="client-info">
 							<div class="client-meta">
-								<h3>Jonathon Andrew</h3>
-								<span>Dec 26, 2018</span>
+								<h3>Karen Fisher</h3>
+								<span>May 20, 2021</span>
 							</div>
 							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolorem non delectus neque,
-									voluptatem accusamus atque expedita doloribus minima iusto nemo, numquam eos quia maiores harum!
-									Quaerat illum beatae necessitatibus!</p>
+								<p>My law firm was in need of communication and data analysis solutions. Transformer built us a bespoke application that works on all platforms. It's increased our efficency, and allowed us to take on more work! We will continue to work with them for a very long time!</p>
 							</div>
 						</div>
 						<!-- /client info -->
