--- a/theme/index.html
+++ b/theme/index.html
@@ -1100,29 +1100,22 @@ Start Our Team
 			<!-- Contact Details -->
 			<div class="contact-info col-lg-6 wow fadeInUp" data-wow-duration="500ms">
 				<h3>Contact Details</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex
-					explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore
-					adipisci.</p>
+				<p>We will respond as soon as possible. Feel free to call us, message us, or send us an email using this form. We look forward to hearing from you no matter the medium.</p>
 				<div class="contact-details">
 					<div class="con-info clearfix">
 						<i class="tf-map-pin"></i>
-						<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
+						<span>Queen Anne Ave., Seattle, Washington, United States</span>
 					</div>
 
 					<div class="con-info clearfix">
 						<i class="tf-ion-ios-telephone-outline"></i>
-						<span>Phone: +880-31-000-000</span>
+						<span>Phone: +1-206-866-5680</span>
 					</div>
 
-					<div class="con-info clearfix">
-						<i class="tf-ion-iphone"></i>
-						<span>Fax: +880-31-000-000</span>
-					</div>
-
-					<div class="con-info clearfix">
+					<!-- <div class="con-info clearfix">
 						<i class="tf-ion-ios-email-outline"></i>
 						<span>Email: hello@meghna.com</span>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<!-- / End Contact Details -->
