updating contact form

--- a/theme/index.html
+++ b/theme/index.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-	<title>Meghna | Responsive Multipurpose Parallax HTML5 Template</title>
+	<title>Tranformer | Responsive Multipurpose Design Solutions</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -1122,14 +1122,14 @@ Start Our Team
 
 			<!-- Contact Form -->
 			<div class="contact-form col-lg-6 mt-4 mt-lg-0 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-				<form id="contact-form" method="post" action="sendmail.php" role="form">
+				<form id="contact-form" method="post" action="http://formspree.io/matthewgdwyer@email.com" role="form">
 
 					<div class="form-group">
 						<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
 					</div>
 
 					<div class="form-group">
-						<input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
+						<input type="email" placeholder="Your Email" class="form-control" name="replyto" id="email">
 					</div>
 
 					<div class="form-group">
@@ -1141,7 +1141,7 @@ Start Our Team
 					</div>
 
 					<div id="cf-submit">
-						<input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
+						<input type="submit" id="contact-submit" class="btn btn-transparent" value="Send">
 					</div>
 
 				</form>
