fixed 2 typos in contact form

--- a/theme/index.html
+++ b/theme/index.html
@@ -1122,14 +1122,14 @@ Start Our Team
 
 			<!-- Contact Form -->
 			<div class="contact-form col-lg-6 mt-4 mt-lg-0 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-				<form id="contact-form" method="post" action="https://formspree.io/matthewgdwyer@email.com" role="form">
+				<form id="contact-form" method="post" action="https://formspree.io/matthewgdwyer@gmail.com" role="form">
 
 					<div class="form-group">
 						<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
 					</div>
 
 					<div class="form-group">
-						<input type="email" placeholder="Your Email" class="form-control" name="replyto" id="email">
+						<input type="email" placeholder="Your Email" class="form-control" name="_replyto" id="email">
 					</div>
 
 					<div class="form-group">
