setting up formspree

--- a/theme/index.html
+++ b/theme/index.html
@@ -1122,7 +1122,7 @@ Start Our Team
 
 			<!-- Contact Form -->
 			<div class="contact-form col-lg-6 mt-4 mt-lg-0 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-				<form id="contact-form" method="post" action="https://formspree.io/matthewgdwyer@gmail.com" role="form">
+				<form id="contact-form" method="post" action="https://formspree.io/f/xjvzbjqa" role="form">
 
 					<div class="form-group">
 						<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
