--- a/theme/index.html
+++ b/theme/index.html
@@ -1171,37 +1171,30 @@ Start Our Team
 				<!-- Footer Social Links -->
 				<div class="social-icon">
 					<ul class="list-inline">
-						<li class="list-inline-item"><a href="https://facebook.com/themefisher"><i class="tf-ion-social-facebook"></i></a></li>
-						<li class="list-inline-item"><a href="https://twitter.com/themefisher"><i class="tf-ion-social-twitter"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.youtube.com/channel/UCx9qVW8VF0LmTi4OF2F8YdA"><i class="tf-ion-social-youtube"></i></a></li>
-						<li class="list-inline-item"><a href="https://dribbble.com/themefisher"><i class="tf-ion-social-dribbble-outline"></i></a></li>
-						<li class="list-inline-item"><a href="https://pinterest.com/themefisher"><i class="tf-ion-social-pinterest-outline"></i></a></li>
+						<li class="list-inline-item"><a href="https://facebook.com"><i class="tf-ion-social-facebook"></i></a></li>
+						<li class="list-inline-item"><a href="https://twitter.com"><i class="tf-ion-social-twitter"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.youtube.com"><i class="tf-ion-social-youtube"></i></a></li>
+						<li class="list-inline-item"><a href="https://dribbble.com"><i class="tf-ion-social-dribbble-outline"></i></a></li>
+						<li class="list-inline-item"><a href="https://pinterest.com"><i class="tf-ion-social-pinterest-outline"></i></a></li>
 					</ul>
 				</div>
 				<!--/. End Footer Social Links -->
 
 				<!-- copyright -->
 				<div class="copyright text-center">
-					<a href="index.html">
-						<!-- <img src="images/logo-meghna.png" alt="Meghna" />  -->
-						<svg width="40px" height="40px" viewBox="0 0 45 44" version="1.1" xmlns="http://www.w3.org/2000/svg"
-							xmlns:xlink="http://www.w3.org/1999/xlink">
-							<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-								<g id="Group" transform="translate(2.000000, 2.000000)" stroke="#57CBCC" stroke-width="3">
-									<ellipse id="Oval" cx="20.5" cy="20" rx="20.5" ry="20"></ellipse>
-									<path d="M6,7 L33.5,34.5" id="Line-2" stroke-linecap="square"></path>
-									<path d="M21,20 L34,7" id="Line-3" stroke-linecap="square"></path>
-								</g>
-							</g>
-						</svg>
+					<a class="navbar-brand logo" href="index.html">
+						<!-- <img src="images/logo.png" alt="Website Logo" /> -->
+						<img src="images/transformer-logo.svg" class="transformer-logo" style="  height: 40px!important;
+						width: 40px!important;"/>
 					</a>
 
-					<p class="mt-3">Copyright
-						&copy; <script>
-							document.write(new Date().getFullYear())
-						</script>. All Rights Reserved. <br> Designed &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>.</p>
+					<p class="mt-3">Designed &amp; Developed by <a href="https://www.linkedin.com/in/matthew-dwyer-5289a119b/">Matthew Dwyer Design</a>.</p>
 				</div>
 				<!-- /copyright -->
+				<!-- <p class="mt-3">Copyright
+					&copy; <script>
+						document.write(new Date().getFullYear())
+					</script>. All Rights Reserved. <br> Designed &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>.</p> -->
 
 			</div> <!-- end col lg 12 -->
 		</div> <!-- end row -->
